fix(jdk17): replace Java 21 List.getFirst() in newly added tests
LockTimeoutHolderDiagnosticsTest, CreateTypeCustomMetadataTest, and
LockManagerDiagnosticsTest used List.getFirst() (Java 21+) on plain List
return types (getBuckets, getSuperTypes, statsSnapshot). Replaced with
list.get(0) to keep the java17 branch on maven-compiler-plugin release 17.